tests/diagnostics/packages/imports/non_public_same_package/expect.txt
# exit: 1
input/main.coppice:1:20: error: imported symbol 'helper' in package 'workspace' must be declared public
  import workspace { helper }
                     ^
